<resources>
    <string name="app_name">Abades Stone Race</string>
    <string name="title_activity_menu__drawer">Abades Stone Race</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="cargando">Cargando...</string>
    <string name="edicion">¡Bienvenidos a la 5ª edición!</string>
    <string name="incripciones">Inscripciones abiertas</string>
    <string name="incribir">Inscribirme en la carrera</string>
    <string name="Pruebas">Pruebas</string>
    <string name="Inscripciones">Inscripciones</string>
    <string name="Resultados">Resultados</string>
    <string name="Patrocinadores">Patrocinadores</string>
    <string name="Patrocinadores_organizadores">Patrocinadores y organizadores</string>
    <string name="informacion">Información</string>
    <string name="Menu_Localizacion">Localización</string>
    <string name="Localizar_dorsal">Localizar dorsal</string>
    <string name="Activar_localizacion">Activar localización</string>
    <string name="posicion_actual">Posición actual dorsal:</string>
    <string name="dorsal_localizar">Indique el dorsal que quiere localizar</string>
    <string name="dorsal_ubicacion">Indique su dorsal</string>
    <string name="Menu_Salir">Otras opciones</string>
    <string name="Salir">Salir de la aplicación</string>
    <string name="inicio">Inicio</string>
    <string name="Abades">Abades Stone race 43km</string>
    <string name="Media">Media Stone race 21km</string>
    <string name="Mini">Mini Stone race 13km</string>
    <string name="Vertical">1/2 KM vertical 1,8km</string>
    <string name="opcion1">opcion1</string>
    <string name="opcion2">opcion2</string>
    <string name="opcion3">opcion3</string>
    <string name="menugps">Opciones GPS</string>
    <string name="menu">Menú</string>
    <string name="gps_inactvo">El GPS no está activo</string>
    <string name="activar_gps">Activar el GPS desde el menú</string>
    <string name="title_activity_scrolling_prueba">ScrollingActivityPrueba</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="mensajesalir">¿Salir de la aplicación?</string>
    <string name="confirmarsalir">¿Está seguro de que desea salir de la aplicación?</string>
    <string name="nodorsal">El dorsal seleccionado no está compartiendo su ubicación</string>
    <string name="nohaydorsal">El dorsal seleccionado no existe</string>
    <string name="clasificado">Clasificado nº:</string>
    <string name="dorsal">Dorsal:</string>
    <string name="nombre">Nombre:</string>
    <string name="avituallamientos">Avituallamientos</string>
    <string name="perfil">PERFIL DEL RECORRIDO:</string>
    <string name="descripcion43">
        "DESCRIPCIÓN STONE RACE:\n\n"
        "Distancia: 43 km.\n"
        "Dificultad técnica: Media – Alta\n"
        "Entorno: Sierra de Loja y Monte Hacho\n"
        "Salida: Área de servicio Abades Loja\n"
        "Llegada: Estadio Medina Lauxa\n"
        "Elevación acumulada positiva: 2.570 m\n"
        "Cota superior: 1614 m. Sierra de Loja\n"
        "Cuotas de inscripción:\n"
        "Federados y No federados: 25 €\n"
    </string>
    <string name="descripcion23">
        "DESCRIPCIÓN MEDIA STONE:\n\n"
        "Distancia: 23 km.\n"
        "Dificultad técnica: Media – Alta\n"
        "Entorno: Sierra de Loja\n"
        "Salida: Área de servicio Abades Loja\n"
        "Llegada: Estadio Medina Lauxa\n"
        "Elevación acumulada positiva: 1.265 m\n"
        "Cota superior: 1500 m. Sierra de Loja\n"
        "Cuotas de inscripción:\n"
        "Federados y No federados: 18 €\n"
    </string>
    <string name="descripcion13">
        "DESCRIPCIÓN MINI STONE:\n\n"
        "Distancia: 13 km.\n"
        "Dificultad técnica: Baja – Media\n"
        "Entorno: Sierra de Loja\n"
        "Salida: Área de servicio Abades Loja\n"
        "Llegada: Estadio Medina Lauxa\n"
        "Elevación acumulada positiva:\n"
        "Cota superior: 1049 m. Sierra de Loja\n"
        "Cuotas de inscripción:\n"
        "Federados y No federados: 18 €\n"
    </string>
    <string name="descripcionmedio">
        "DESCRIPCIÓN 1/2 KM VERTICAL:\n\n"
        "Distancia: 1.8 km.\n"
        "Dificultad técnica: Media\n"
        "Entorno: Sierra de Loja\n"
        "Salida: Área de servicio Abades Loja\n"
        "Llegada: Punto más alto\n"
        "Elevación acumulada positiva: 485 m\n"
        "Cota superior: 1044 m.\n"
        "Cuotas de inscripción:\n"
        "• Gratis con la inscripción en cualquier modalidad.\n"
        "• Solo para el Stone ½ Km Vertical: 5 €\n"
    </string>
</resources>