<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/Pruebas">
        <menu>
            <item
                android:id="@+id/nav_abades"
                android:title="@string/Abades" />
            <item
                android:id="@+id/nav_media"
                android:title="@string/Media" />
            <item
                android:id="@+id/nav_mini"
                android:title="@string/Mini" />
            <item
                android:id="@+id/nav_vertical"
                android:title="@string/Vertical" />
        </menu>
    </item>

    <item android:title="Opciones">
        <menu>

        <item
            android:id="@+id/nav_actividades"
            android:icon="@drawable/activities"
            android:title="@string/Inscripciones" />
        <item
            android:id="@+id/nav_resultados"
            android:icon="@drawable/podium"
            android:title="@string/Resultados" />
        <item
            android:id="@+id/nav_patrocinadores"
            android:icon="@drawable/patrocinadores"
            android:title="@string/Patrocinadores" />
        <item
            android:id="@+id/nav_informacion"
            android:icon="@drawable/information"
            android:title="@string/informacion" />
        </menu>
    </item>



    <item android:title="@string/Menu_Localizacion">
        <menu>
            <item
                android:id="@+id/nav_loc_dorsal"
                android:icon="@drawable/locdorsal"
                android:title="@string/Activar_localizacion" />
            <item
                android:id="@+id/nav_loc"
                android:icon="@drawable/activarloc"
                android:title="@string/Localizar_dorsal" />
        </menu>
    </item>

    <item android:title="@string/Menu_Salir">
        <menu>
            <item
                android:id="@+id/salir"
                android:icon="@drawable/saliropcion"
                android:title="@string/Salir" />

        </menu>
    </item>

</menu>
